--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,6 @@
-<h1>
-  {{title}}
-</h1>
+<a routerLink="/">Главная</a>
+
+<a routerLink="course-list">Курсы</a>
+<a routerLink="program-list">Программы</a>
+
 <router-outlet></router-outlet>
