--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,2 @@
-<a routerLink="/">Главная</a>
-
-<a routerLink="course-list">Курсы</a>
-<a routerLink="program-list">Программы</a>
-
+<app-navigation></app-navigation>
 <router-outlet></router-outlet>
