--- a/src/app/discipline/discipline.component.scss
+++ b/src/app/discipline/discipline.component.scss
@@ -1,8 +1,8 @@
 .discipline{
-    display: inline-block;
+   /* display: inline-block;
     width: 250px;
-    height: 50px;
-    border: 1px solid gray;
+    height: 50px;*/
+    //border: 1px solid gray;
     margin: 4px;
     padding: 4px;
     vertical-align: top;
